Fixed bug with not centered items

--- a/projects/getnova-components/src/layout/page/page-header/page-header.component.scss
+++ b/projects/getnova-components/src/layout/page/page-header/page-header.component.scss
@@ -10,6 +10,7 @@
   nav {
     display: flex;
     flex-direction: row;
+    align-items: center;
     column-gap: $cube * 20;
 
     ::ng-deep a {
